--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,6 @@
 body{
-    margin: 0;
-    border: 0;
-    background-color: rgb(219, 212, 205);
+    
+    background: url(sopa.jpg);
 }
 .name{
     width: 100%;
@@ -9,7 +8,7 @@ body{
     background-color: rgb(226, 70, 43);
     transform: skewY(-5deg);
 }
-.name .content{
+/*.name .content{
     width: 50%;
     height: 50%;
     position:absolute;
@@ -53,15 +52,15 @@ body{
     position: absolute;
     top: 45%;
     right:5%;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     
     overflow: hidden;
     border-radius:100%;
 }
 .info .img img{
-    width: 100px;
-   height: 100px;
+    width: 90px;
+   height: 90px;
    
    
     
@@ -98,7 +97,80 @@ body{
     font-weight: normal;
     display: inline-block;
     
+}*/
+.tabla{
+    background-color: rgb(194, 204, 204);
+    border: 2px;
+    position: absolute;
+    left: 260px;
+    top: 210px;
+    
+    border-style: hidden;
+    
+    
+
 }
+
+
+
+.titulotabla{
+    background-color: aliceblue;
+    font-size: 100px;
+    font-style: oblique;
+
+}
+td{
+    background-color: rgb(241, 235, 235);
+    width: 50px;
+    height: 50px;
+    text-align: center;
+   
+   
+ 
+    
+}
+th{
+    background-color: rgb(241, 235, 235);
+    width: 50px;
+    height: 50px;
+    text-align: center;
+   
+   
+}
+
+/*section span{
+    background-color: green;
+    font-size: medium;
+    padding: 10px;
+    margin:25px;
+    border-radius: 25px;
+    border-style: dotted;
+    border-color: blue;
+    
+}
+#respuesta{
+    background-color:blue ;
+}
+.celda{
+    background-color: green;
+    font-size: medium;
+    padding: 30px;
+    margin:25px;
+    border-radius: 55px;
+    border-style: groove;
+    border-color: blue;
+    width: 20px;
+   
+}
+form{
+    background-color: aqua;
+    margin: 25px;
+    padding: 15px;
+}
+input{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}*/
 
 
 
